--- a/plus-ui/package.json
+++ b/plus-ui/package.json
@@ -36,6 +36,7 @@
     "js-cookie": "3.0.5",
     "jsencrypt": "3.3.2",
     "nprogress": "0.2.0",
+    "pdfjs-dist": "^5.4.449",
     "pinia": "3.0.2",
     "screenfull": "6.0.2",
     "vue": "3.5.13",
@@ -51,6 +52,7 @@
     "@types/crypto-js": "4.2.2",
     "@types/file-saver": "2.0.7",
     "@types/js-cookie": "3.0.6",
+    "@types/jszip": "^3.4.0",
     "@types/node": "^22.13.4",
     "@types/nprogress": "0.2.3",
     "@unocss/preset-attributify": "66.5.2",
