--- a/plus-ui/package.json
+++ b/plus-ui/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "2.3.1",
     "@highlightjs/vue-plugin": "2.1.0",
+    "@toast-ui/editor": "^3.2.2",
     "@vueup/vue-quill": "1.2.0",
     "@vueuse/core": "13.1.0",
     "animate.css": "4.1.1",
@@ -31,10 +32,11 @@
     "echarts": "5.6.0",
     "element-plus": "2.9.8",
     "file-saver": "2.0.5",
-    "highlight.js": "11.9.0",
+    "highlight.js": "^11.9.0",
     "image-conversion": "2.1.1",
     "js-cookie": "3.0.5",
     "jsencrypt": "3.3.2",
+    "mammoth": "^1.11.0",
     "nprogress": "0.2.0",
     "pdfjs-dist": "^5.4.449",
     "pinia": "3.0.2",
@@ -45,7 +47,8 @@
     "vue-json-pretty": "2.4.0",
     "vue-router": "4.5.0",
     "vue-types": "6.0.0",
-    "vxe-table": "4.13.7"
+    "vxe-table": "4.13.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.276",
@@ -53,7 +56,7 @@
     "@types/file-saver": "2.0.7",
     "@types/js-cookie": "3.0.6",
     "@types/jszip": "^3.4.0",
-    "@types/node": "^22.13.4",
+    "@types/node": "^22.19.3",
     "@types/nprogress": "0.2.3",
     "@unocss/preset-attributify": "66.5.2",
     "@unocss/preset-icons": "66.5.2",
